app/globals.css
@import "@fontsource/material-symbols-outlined";

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-feature-settings: "cv11", "ss01";
}

.serif-italic {
  font-family: var(--font-instrument-serif), serif;
  font-style: italic;
}

.material-symbols-outlined {
  font-family: "Material Symbols Outlined";
  font-style: normal;
  font-weight: 400;
  font-display: block;
  line-height: 1;
  letter-spacing: normal;
  text-transform: none;
  white-space: nowrap;
  word-wrap: normal;
  direction: ltr;
  -webkit-font-smoothing: antialiased;
  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
}

.text-gradient {
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-image: linear-gradient(to right, #2e2e2e, #555);
}

.dark .text-gradient {
  background-image: linear-gradient(to right, #e5e5e5, #aaa);
}

